<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dp16"
    android:paddingRight="@dimen/dp16"
    android:paddingTop="@dimen/dp16"
    tools:context="com.learnerdev.sharenearn.SearchItems">

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:layout_margin="@dimen/dp8"
        android:background="@color/common_google_signin_btn_text_dark_pressed"
        android:translationZ="@dimen/dp4">

        <AutoCompleteTextView
            android:id="@+id/s_input_auto_complete_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/dp4"
            android:background="@null"
            android:ems="12"
            android:hint="@string/item_location" />

        <ImageButton
            android:id="@+id/s_btn_current_location"
            android:layout_width="@dimen/dp40"
            android:layout_height="@dimen/dp40"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:clickable="true"
            android:src="@drawable/ic_gps_fixed_black" />
    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/dp16"
        android:src="@drawable/powered_by_google_light"

        />

    <EditText
        android:id="@+id/s_input_item_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:layout_margin="@dimen/dp8"
        android:background="@color/common_google_signin_btn_text_dark_pressed"
        android:ems="15"
        android:hint="@string/item_name"
        android:inputType="text"
        android:minWidth="@dimen/dp16"
        android:paddingLeft="@dimen/dp4"
        android:translationZ="@dimen/dp4" />

    <Button
        android:id="@+id/s_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp16"
        android:text="@string/search" />

    <TextView
        android:id="@+id/s_tv_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp16"
        android:minHeight="@dimen/dp40"

        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/s_item_recycler"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp192"
        android:scrollbars="vertical"
        android:translationZ="@dimen/dp4" />

    <FrameLayout
        android:id="@+id/view_item_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2" />
</LinearLayout>
